<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="btn_cancel">Отмена</string>
    <string name="btn_clear_history">Очистить историю</string>
    <string name="btn_complete">Завершить</string>
    <string name="btn_create_playlist">Создать</string>
    <string name="btn_delete">Удалить</string>
    <string name="btn_new_playlist">Новый плейлист</string>
    <string name="btn_no">Нет</string>
    <string name="btn_refresh">Обновить</string>
    <string name="btn_save">Сохранить</string>
    <string name="btn_yes">Да</string>
    <string name="desc_add_to_playlist">Добавить в плейлист</string>
    <string name="desc_agreement">Пользовательское соглашение</string>
    <string name="desc_arrow_forward">Вперед</string>
    <string name="desc_back">Назад</string>
    <string name="desc_clear_search">Очистить поиск</string>
    <string name="desc_like">Нравится</string>
    <string name="desc_menu">Меню</string>
    <string name="desc_play">Воспроизведение трека</string>
    <string name="desc_playlist_icon">Иконка плейлиста</string>
    <string name="desc_search">Поиск</string>
    <string name="desc_share_app">Поделиться приложением</string>F
    <string name="desc_share_playlist">Поделиться плейлистом</string>
    <string name="desc_support">Написать в поддержку</string>
    <string name="desc_track_icon">Иконка трека</string>
    <string name="hint_minutes_example">300 минут</string>
    <string name="hint_playlist_description">Описание</string>
    <string name="hint_playlist_name">Название*</string>
    <string name="hint_playlist_name_example">Название плейлиста</string>
    <string name="hint_playlist_songs_number_example">98 треков</string>
    <string name="hint_track_number">96 треков</string>
    <string name="hint_year_example">2024</string>
    <string name="lbl_add_to_playlist">Добавить в плейлист</string>
    <string name="lbl_dark_theme">Темная тема</string>
    <string name="lbl_delete_playlist">Удалить плейлист</string>
    <string name="lbl_delete_track">Удалить трек</string>
    <string name="lbl_edit_info">Редактировать информацию</string>
    <string name="lbl_initial_track_time">00:00</string>
    <string name="lbl_last_search">Вы искали</string>
    <string name="lbl_player_track_author">Автор песни</string>
    <string name="lbl_player_track_name">Название песни</string>
    <string name="lbl_playlist">Плейлист \"%1$s\"</string>
    <string name="lbl_playlist_name">Имя плейлиста</string>
    <string name="lbl_share">Поделиться</string>
    <string name="lbl_share_app">Поделиться приложением</string>
    <string name="lbl_support">Написать в поддержку</string>
    <string name="lbl_track_album">Альбом</string>
    <string name="lbl_track_country">Страна</string>
    <string name="lbl_track_style">Жанр</string>
    <string name="lbl_track_time">Длительность</string>
    <string name="lbl_track_year">Год</string>
    <string name="lbl_user_agreement">Пользовательское соглашение</string>
    <string name="msg_complete_playlist_creation">Завершить создание плейлиста?</string>
    <string name="msg_empty_media_error">Ваша медиатека пуста</string>
    <string name="msg_empty_playlists_error">Вы не создали\nни одного плейлиста</string>
    <string name="msg_no_internet_connection">Проблемы со связью \n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="msg_no_tracks">В этом плейлисте нет треков</string>
    <string name="msg_nothing_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="msg_app_not_found">Не найдено ни одного приложения</string>
    <string name="msg_playlist_created">Плейлист %1$s создан</string>
    <string name="msg_playlist_updated">Плейлист %1$s обновлен</string>
    <string name="msg_tracks_not_found">Ничего не нашлось</string>
    <string name="msg_unsaved_data_losing">Все несохраненные данные будут потеряны</string>
    <string name="msg_want_to_delete_playlist">Удалить плейлист?</string>
    <string name="msg_want_to_delete_track">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="tab_media">Медиатека</string>
    <string name="tab_media_favorites">Избранные треки</string>
    <string name="tab_media_playlists">Плейлисты</string>
    <string name="tab_search">Поиск</string>
    <string name="tab_settings">Настройки</string>
    <string name="title_edit">Редактировать</string>
    <string name="title_media">Медиатека</string>
    <string name="title_playlist">Новый плейлист</string>
    <string name="title_search">Поиск</string>
    <string name="title_settings">Настройки</string>
</resources>