<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/SecondaryScreenLayoutStyle"
    tools:context=".screenSettings.presentation.SettingsFragment">


    <LinearLayout style="@style/HeaderStyle">
        <TextView
            style="@style/header_tv"
            android:text="@string/title_settings" />
    </LinearLayout>

    <FrameLayout style="@style/SettingsFrameLayoutStyle">

        <TextView
            style="@style/SettingsListText"
            android:text="@string/lbl_dark_theme" />

        <Switch
            android:id="@+id/night_mode_switch"
            style="@style/SettingsToggle" />

    </FrameLayout>

    <FrameLayout style="@style/SettingsFrameLayoutStyle">

        <TextView
            style="@style/SettingsListText"
            android:text="@string/lbl_share_app" />

        <ImageButton
            android:id="@+id/share_btn"
            style="@style/SettingsListButton"
            android:contentDescription="@string/desc_share_app"
            android:src="@drawable/share" />
    </FrameLayout>

    <FrameLayout style="@style/SettingsFrameLayoutStyle">

        <TextView
            style="@style/SettingsListText"
            android:text="@string/lbl_support" />

        <ImageButton
            android:id="@+id/support_btn"
            style="@style/SettingsListButton"
            android:contentDescription="@string/desc_support"
            android:src="@drawable/support" />
    </FrameLayout>

    <FrameLayout style="@style/SettingsFrameLayoutStyle">

        <TextView
            style="@style/SettingsListText"
            android:text="@string/lbl_user_agreement" />

        <ImageButton
            android:id="@+id/agreement_btn"
            style="@style/SettingsListButton"
            android:contentDescription="@string/desc_agreement"
            android:src="@drawable/arrow_forward" />
    </FrameLayout>

</LinearLayout>