<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".presentation.screenEditPlaylist.EditPlaylistFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="@dimen/header_height"
        android:layout_height="@dimen/header_height"
        android:layout_gravity="start|center"
        android:background="@null"
        android:contentDescription="@string/desc_back"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back" />

    <TextView
        android:id="@+id/header_tv"
        android:layout_width="0dp"
        android:layout_height="@dimen/header_height"
        android:fontFamily="@font/ys_font_family_medium"
        android:gravity="center|start"

        android:text="@string/title_edit"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/medium_text_size_22"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/back_button"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/player_track_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/playlist_image_special_border"
        android:contentDescription="@string/desc_track_icon"
        android:scaleType="centerCrop"
        android:src="@drawable/playlist_image_placeholder"
        app:layout_constraintBottom_toTopOf="@+id/playlist_name_til"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/back_button" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlist_name_til"
        style="@style/PlaylistTextInputStyle"
        android:layout_marginTop="40dp"
        android:hint="@string/hint_playlist_name"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/player_track_image">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlist_name_ti_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:lines="1"
            android:singleLine="true"
            android:textSize="@dimen/regular_text_size_16" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description_name_til"
        style="@style/PlaylistTextInputStyle"

        android:layout_marginTop="16dp"
        android:hint="@string/hint_playlist_description"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/playlist_name_til">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description_ti_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:lines="1"
            android:maxLength="225"
            android:singleLine="true"
            android:textSize="@dimen/regular_text_size_16" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create_button"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/playlist_button_background"
        android:backgroundTint="@color/button_enable_color"
        android:enabled="false"
        android:scaleType="centerCrop"
        android:text="@string/btn_save"
        android:textAllCaps="false"
        android:textColor="@color/YP_white"
        android:textSize="@dimen/medium_text_size_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline" />
</androidx.constraintlayout.widget.ConstraintLayout>